# lubricate-magnetic-compensation

./: CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  _typos.toml  mkdocs.yml  pyproject.toml  typos.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  pull-request.yml  release.yml  slack-release-notifications.yml
docs/: README.md  gen_ref_pages.py  theory.md
docs/plans/: 2026-03-18-fix-cosine-normalization-design.md  2026-03-18-fix-cosine-normalization.md  2026-03-19-adaptive-maneuver-compensation.md  2026-03-21-heading-specific-model-selection.md  2026-03-21-rls-online-coefficient-updating.md  2026-03-22-normalize-alpha-convention.md  2026-03-22-persist-calibration-reference-heading.md  2026-03-22-rlsstate-mutability-contract.md  2026-03-23-causal-derivative-features-cv.md
lmc/: __init__.py  __main__.py  adaptive.py  calibration.py  columns.py  compensation.py  config.py  earth_field.py  features.py  heading_calibration.py  metrics.py  rls.py  segmentation.py  validation.py  vif.py
lmc/cli/: __init__.py  commands.py
lmc/nn/: __init__.py  pinn.py  supervised.py
tests/integration/: synthetic.py  test_adaptive_integration.py  test_heading_specific_integration.py  test_integration_simple.py
tests/unit/: test_adaptive.py  test_calibration.py  test_cli.py  test_compensation.py  test_config.py  test_earth_field.py  test_features.py  test_heading_calibration.py  test_metrics.py  test_rls.py  test_segmentation.py  test_unit_simple.py  test_validate_coef_dict.py  test_validation.py  test_vif.py
tests/unit/nn/: test_pinn.py  test_supervised.py
