[project]
name = "lubricate-magnetic-compensation"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "polars>=1.38.1",
    "ppigrf>=2.1.0",
    "pydantic>=2.0.0",
    "typer~=0.23.1",
]

[project.scripts]
lubricate-magnetic-compensation = "lmc.__main__:app"

[tool.uv]
package = true
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=1.0.3",
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "python-semantic-release>=10.0.0,<11.0.0",
    "bandit>=1.7.0",
    "ruff>=0.2.0",
    "typos>=1.16.0",
    "yamllint>=1.35.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lmc*"]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["lmc"]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "@abstractmethod",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "if 0:",
    "if __name__ == '__main__':",
]

[tool.bandit]
targets = ["lmc"]

[tool.semantic_release]
# Version management - use pyproject.toml as the single source of truth
version_toml = ["pyproject.toml:project.version"]

# Branch and repository settings
branch = "main"
hvcs = "github"

# Build configuration
build_command = "uv build"

# Upload settings - GitHub releases only, no PyPI yet
upload_to_pypi = false
upload_to_release = true

# Changelog settings
changelog_file = "CHANGELOG.md"
changelog_placeholder = "<!--next-version-->"

# Commit message configuration
commit_parser = "conventional"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

# Tag format
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
# Map commit types to version bumps
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
# Major releases triggered by BREAKING CHANGE in commit footer or ! after type
# No explicit major_tags needed - this is handled automatically
allowed_tags = ["feat", "fix", "docs", "ci", "refactor", "test", "chore"]
default_bump_level = 0
